--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mac-os</title>
+    <link rel="shortcut icon" href="/src/assets/android-chrome-192x192.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
